--- a/index.css
+++ b/index.css
@@ -1,23 +1,23 @@
 .container{
-    display: flex;
-   justify-content: center;
-   align-items: center;
-   background: rgba(229, 84, 115, 0.10);
+display: flex;
+justify-content: center;
+align-items: center;
+background: rgba(229, 84, 115, 0.10);
 
 }
 .title{
-    width: 708px;
-    font-size: 65px;
-    font-weight: 800;
+width: 708px;
+font-size: 65px;
+font-weight: 800;
 }
 .description{
-    width: 634px;
-    color: rgba(39, 39, 39, 0.60);
-    font-weight: 400;
-    line-height: 30px;
+width: 634px;
+color: rgba(39, 39, 39, 0.60);
+font-weight: 400;
+line-height: 30px;
 }
 .repo{
-    display: inline-flex;
+display: inline-flex;
 padding: 20px 43px;
 border-radius: 8px;
 background: #E55473;
@@ -28,7 +28,24 @@ font-size: 20px;
 font-weight: 700;
 }
 .condition{
-    width: 635px;
-    height: 700px;
+width: 635px;
+height: 700px;
   
+}
+.reposit{
+text-align: center;
+margin-top: 100px;
+padding: 24px;
+}
+.denger{
+color: #272727;
+text-align: center;
+font-size: 45px;
+font-weight: 800;
+}
+.title-repo{
+color: rgba(39, 39, 39, 0.60);
+font-size: 18px;
+font-weight: 400;
+text-align: center;
 }
