--- a/index.css
+++ b/index.css
@@ -49,3 +49,59 @@ font-size: 18px;
 font-weight: 400;
 text-align: center;
 }
+.radio{
+    display: flex;
+    justify-content: center;
+    gap:24px;
+    margin-top:50px ;
+    margin-left: 240px;
+    margin-right: 240px;
+    
+}
+.repoter{
+border-radius: 300px 300px 0px 0px;
+ width: 310px;
+height: 428px;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+background: rgba(167, 33, 98, 0.15);
+padding:0px 70px;
+padding-top: 100px;
+}
+.ginipic{
+    text-align: center;
+    font-size: 24px;
+    /* padding: 20px; */
+    color: #272727;
+    font-weight: 700;
+}
+.phone{
+
+    padding:  47px 47px 110px 40px ;
+/* padding-top: 100px; */
+border-radius: 300px 300px 0px 0px;
+background: rgba(5, 151, 160, 0.15);
+width: 370px;
+height: 370px;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+.config{
+    color: #272727;
+text-align: center;
+font-size: 24px;
+font-weight: 700;
+}
+.website{
+    padding:0px 75px  ;
+    padding-top: 55px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    width: 314px;
+    height: 471px;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+.regular{
+    color: #272727;
+text-align: center;
+font-size: 24px;
+font-weight: 700;
+}
