--- a/index.css
+++ b/index.css
@@ -101,9 +101,10 @@ font-weight: 700;
 }
 .regular{
     color: #272727;
-text-align: center;
-font-size: 24px;
-font-weight: 700;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+
 }
 .origin{
     display: flex;
@@ -153,4 +154,45 @@ height: 88px;
 text-align: center;
 font-size: 24px;
 font-weight: 600;
+}
+.lorem{
+display: flex;
+justify-content: center;
+    /* justify-items: center; */
+gap: 100px;
+width: 1922px;
+height: 620px;
+border-radius: 8px;
+background: rgba(229, 84, 115, 0.05);
+margin-bottom: 124px;
+}
+.exam{
+    color: #272727;
+font-size: 40px;
+font-weight: 800;
+text-align: center;
+}
+.point{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+}
+.enime{
+   text-align: center;
+padding: 20px 43px;
+/* align-items: flex-start; */
+gap: 10px;
+border-radius: 8px;
+background: #E55473;
+color: #FFF;
+font-size: 20px;
+font-weight: 700;
+}
+.regula{
+    border: 10px;
+    margin-top:  100px;
+    width: 218px;
+height: 320px;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
 }
