--- a/index.css
+++ b/index.css
@@ -286,3 +286,32 @@ color: #FFF;
 font-size: 20px;
 font-weight: 700;
 }
+.navi{
+    display: flex;
+   justify-content: center;
+   justify-items: center;
+   background: #111010;
+   margin-top: 100px;
+
+}
+.position{
+    color: #E55473;
+font-size: 48px;
+font-weight: 800;
+text-align: center;
+}
+.flower{
+    color: #FFF;
+}
+.regulation{
+    color: rgba(255, 255, 255, 0.90);
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+}
+.range{
+    color: rgba(255, 255, 255, 0.40);
+text-align: center;
+font-size: 16px;
+font-weight: 400;
+}
